<resources>
    <string name="app_name">WeighingDemo</string>
    <string name="title">Sunmi Weighing Demo</string>
    <string name="version_name">Version：%s</string>
    <string name="total_price">Total Price:(€)</string>
    <string name="money_unit">€</string>
    <string name="price">€ %.2f</string>
    <string name="apple">Apple</string>
    <string name="pear">Pear</string>
    <string name="persimmon">Persimmon</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="cherry">Cherry</string>
    <string name="orange">Orange</string>
    <string name="banana">Banana</string>
    <string name="blueberry">Blueberry</string>
    <string name="pitaya">Pitaya</string>
    <string name="lichee">Lichee</string>
    <string name="watermelon">Watermelon</string>
    <string name="honeydew">Honeydew</string>
    <string name="scallions">Scallions</string>
    <string name="endive">Endive</string>
    <string name="beet_leaves">Beet_leaves</string>
    <string name="beetroot">Beetroot</string>
    <string name="cassava">Cassava</string>
    <string name="artichoke">Artichoke</string>

    <string name="print_title">XXX fruit store</string>
    <string name="print_cashier">Store：ClerkA</string>
    <string name="print_address">Trans#：0008</string>
    <string name="print_receipt">No.：20220408123649186001</string>
    <string name="print_time">Date：%s</string>
    <string name="print_name">Item</string>
    <string name="print_price">Price</string>
    <string name="print_pcs">Uom/Qty</string>
    <string name="print_subtotal">AMT</string>
    <string name="print_original_price">Total：%s</string>
    <string name="print_current_price">In Cash：%s</string>
    <string name="print_pay">Cash：%s</string>
    <string name="print_change">Cashback：0.00%s</string>
    <string name="print_remark">remarks:</string>
    <string name="print_null">Nothing</string>

    <string name="item">item</string>
    <string name="unit_price">Unit Price</string>
    <string name="net">Net/Price</string>
    <string name="sum">Sun</string>
    <string name="reque">Reque</string>
    <string name="settlement">Settlement</string>
</resources>